---------------------------------- 2022-02-22 17:10:39
no qc pass: p4lang: egress hibryd access list
no qc pass: p4lang: ingress hibryd access list
no qc pass: egress destination port matching hibryd access list
no qc pass: ingress destination port matching hibryd access list
no qc pass: egress source port matching hibryd access list
no qc pass: ingress source port matching hibryd access list
no qc pass: egress source matching hibryd access list
no qc pass: ingress source matching hibryd access list
no qc pass: egress destination matching hibryd access list
no qc pass: ingress destination matching hibryd access list
qc pass: ingress destination matching hybrid access list
qc pass: egress destination matching hybrid access list
qc pass: ingress source matching hybrid access list
qc pass: egress source matching hybrid access list
qc pass: ingress source port matching hybrid access list
qc pass: egress source port matching hybrid access list
qc pass: ingress destination port matching hybrid access list
qc pass: egress destination port matching hybrid access list
qc pass: p4lang: ingress hybrid access list
qc pass: p4lang: egress hybrid access list
---------------------------------- 2022-02-23 08:14:30
qc pass: bgp routemap filtering with asbeg
qc pass: bgp routemap filtering with asbeg with soft-reconfig
qc pass: bgp routepolicy filtering with asbeg
qc pass: bgp routepolicy filtering with asbeg with soft-reconfig
---------------------------------- 2022-02-27 20:32:47
qc pass: p4lang: bridge interface inspection with ingress drop
qc pass: p4lang: bridge interface inspection with egress drop
qc pass: p4lang: pppoe interface inspection with ingress drop
qc pass: p4lang: pppoe interface inspection with egress drop
qc pass: p4lang: gre interface inspection with ingress drop
qc pass: p4lang: gre interface inspection with egress drop
qc pass: p4lang: l2tp interface inspection with ingress drop
qc pass: p4lang: l2tp interface inspection with egress drop