@@ -1,0 +1,36 @@
+description interop8: verify source
+
+addrouter r1
+int eth1 eth 0000.0000.1111 $1a$ $1b$
+!
+vrf def v1
+ rd 1:1
+ exit
+int eth1
+ vrf for v1
+ ipv4 addr 1.1.1.1 255.255.255.0
+ ipv6 addr 1234::1 ffff::
+ ipv4 verify rx
+ ipv6 verify rx
+ exit
+!
+
+addother r2
+int eth1 eth 0000.0000.2222 $1b$ $1a$
+!
+ip forwarding
+ipv6 forwarding
+interface ens3
+ ip address 1.1.1.2/24
+ ipv6 address 1234::2/64
+ no shutdown
+ exit
+!
+
+
+
+r1 tping 100 15 1.1.1.2 /vrf v1 /siz 222
+r1 tping 100 15 1234::2 /vrf v1 /siz 222
+
+r1 tping 100 15 1.1.1.2 /vrf v1 /siz 2222
+r1 tping 100 15 1234::2 /vrf v1 /siz 2222
