@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v22.2.27-cur, done by cs@nop.
--;-;-;2022-02-27 20:40:13, took 00:07:25, with 100 workers, on 2742 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2022-02-27 21:00:55, took 00:06:56, with 100 workers, on 2748 cases, 0 failed, 0 traces, 5 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -1371,6 +1371,12 @@ http://sources.nop.hu/cfg/p4lang-acl65.tst;p4lang-acl65.tst;success;p4lang: gre 
 http://sources.nop.hu/cfg/p4lang-acl66.tst;p4lang-acl66.tst;success;p4lang: gre interface inspection with egress drop
 http://sources.nop.hu/cfg/p4lang-acl67.tst;p4lang-acl67.tst;success;p4lang: l2tp interface inspection with ingress drop
 http://sources.nop.hu/cfg/p4lang-acl68.tst;p4lang-acl68.tst;success;p4lang: l2tp interface inspection with egress drop
+http://sources.nop.hu/cfg/p4lang-acl69.tst;p4lang-acl69.tst;success;p4lang: interface verify source
+http://sources.nop.hu/cfg/p4lang-acl70.tst;p4lang-acl70.tst;success;p4lang: vlan interface verify source
+http://sources.nop.hu/cfg/p4lang-acl71.tst;p4lang-acl71.tst;success;p4lang: bridge interface verify source
+http://sources.nop.hu/cfg/p4lang-acl72.tst;p4lang-acl72.tst;success;p4lang: pppoe interface verify source
+http://sources.nop.hu/cfg/p4lang-acl73.tst;p4lang-acl73.tst;success;p4lang: gre interface verify source
+http://sources.nop.hu/cfg/p4lang-acl74.tst;p4lang-acl74.tst;success;p4lang: l2tp interface verify source
 http://sources.nop.hu/cfg/p4lang-crypt001.tst;p4lang-crypt001.tst;success;p4lang: macsec with des
 http://sources.nop.hu/cfg/p4lang-crypt002.tst;p4lang-crypt002.tst;success;p4lang: macsec with 3des
 http://sources.nop.hu/cfg/p4lang-crypt003.tst;p4lang-crypt003.tst;success;p4lang: macsec with aes128cbc
