@@ -1367,6 +1367,12 @@ qc pass: p4lang: gre interface inspection with ingress drop
 qc pass: p4lang: gre interface inspection with egress drop
 qc pass: p4lang: l2tp interface inspection with ingress drop
 qc pass: p4lang: l2tp interface inspection with egress drop
+qc pass: p4lang: interface verify source
+qc pass: p4lang: vlan interface verify source
+qc pass: p4lang: bridge interface verify source
+qc pass: p4lang: pppoe interface verify source
+qc pass: p4lang: gre interface verify source
+qc pass: p4lang: l2tp interface verify source
 qc pass: p4lang: macsec with des
 qc pass: p4lang: macsec with 3des
 qc pass: p4lang: macsec with aes128cbc
