@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v22.2.27-cur, done by cs@nop.<br/>
-tested: 2022-02-27 20:40:13, took 00:07:25, with 100 workers, on 2742 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2022-02-27 21:00:55, took 00:06:56, with 100 workers, on 2748 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1384,6 +1384,12 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl66.tst">p4lang-acl66.tst</a></td><td>success</td><td>p4lang: gre interface inspection with egress drop</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl67.tst">p4lang-acl67.tst</a></td><td>success</td><td>p4lang: l2tp interface inspection with ingress drop</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl68.tst">p4lang-acl68.tst</a></td><td>success</td><td>p4lang: l2tp interface inspection with egress drop</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl69.tst">p4lang-acl69.tst</a></td><td>success</td><td>p4lang: interface verify source</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl70.tst">p4lang-acl70.tst</a></td><td>success</td><td>p4lang: vlan interface verify source</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl71.tst">p4lang-acl71.tst</a></td><td>success</td><td>p4lang: bridge interface verify source</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl72.tst">p4lang-acl72.tst</a></td><td>success</td><td>p4lang: pppoe interface verify source</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl73.tst">p4lang-acl73.tst</a></td><td>success</td><td>p4lang: gre interface verify source</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/p4lang-acl74.tst">p4lang-acl74.tst</a></td><td>success</td><td>p4lang: l2tp interface verify source</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt001.tst">p4lang-crypt001.tst</a></td><td>success</td><td>p4lang: macsec with des</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt002.tst">p4lang-crypt002.tst</a></td><td>success</td><td>p4lang: macsec with 3des</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/p4lang-crypt003.tst">p4lang-crypt003.tst</a></td><td>success</td><td>p4lang: macsec with aes128cbc</td></tr>
